# media-demo

./: CMakeLists.txt  README.md  audioplayer.cpp  audioplayer.h  audioplayerthread.cpp  audioplayerthread.h  avdecoder.cpp  avdecoder.h  avplayer.cpp  avplayer.h  avsimpleplayer.cpp  avsimpleplayer.h  decodethread.cpp  decodethread.h  decodeutils.cpp  decodeutils.h  main.cpp  sonic.cpp  src.qrc  videoplayerthread.cpp  videoplayerthread.h  widget.cpp  widget.h  widget.ui
Resources/: TestVideoh264.m4v
UI/: framegrabber.cpp  framegrabber.h  mainwindow.cpp  mainwindow.h  myvideowidget.cpp  myvideowidget.h  player.cpp  player.h  playlist.cpp  playlist.h  playlistmodel.cpp  playlistmodel.h  recorder.cpp  recorder.h
VideoDecoder/: audioplayer.cpp  audioplayer.h  avplayer.cpp  avplayer.h  decodethread.cpp  decodethread.h  decodeutils.cpp  decodeutils.h  videoplayerthread.cpp  videoplayerthread.h
ffmpeg/lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  swresample.lib  swscale.lib
ffmpeg/lib/pkgconfig/: libavdevice.pc  libavfilter.pc
